<resources>
    <string name="app_name">San Miguel Municipio</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_main_parking">Estacionamiento</string>
    <string name="title_activity_availability">Disponibilidad</string>

    <string name="parking">Estacionamiento</string>
    <string name="stores">Puntos de Venta</string>
    <string name="availability">Disponibilidad</string>

    <string name="action_settings">Settings</string>
    <string name="parking_start">Comenzar</string>
    <string name="parking_finish">Finalizar</string>
    <string name="domain">Dominio</string>

    <string name="search">Buscar</string>
    <string name="street">Calle</string>
    <string name="number">Altura</string>

    <string name="total_cost">Costo Total: $ %1$d</string>
    <string name="loading">Espere un momento</string>
    <string name="parking_active">Estacionamiento Activo</string>
    <string name="parking_finished">Estacionamiento Finalizado</string>

    <string name="availability_high">Disponibilidad Alta</string>
    <string name="availability_medium">Disponibilidad Media</string>
    <string name="availability_low">Disponibilidad Baja</string>

    <string name="no_data_available">No hay resultados</string>

</resources>
