<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:background="@drawable/msn"
tools:context="com.example.marcos.smartparking.HomeActivity"
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center">

    <Button
        android:id="@+id/parkingButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:text="@string/parking"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/storesButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parkingButton"
        android:background="@drawable/button"
        android:layout_margin="10dp"
        android:text="@string/stores"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/availabilityButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storesButton"
        android:background="@drawable/button"
        android:layout_margin="10dp"
        android:text="@string/availability"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"/>
</RelativeLayout>
