<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.marcos.smartparking.MainParkingActivity"
    tools:showIn="@layout/main_parking">

    <Button
        android:id="@+id/stopButton"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:background="@drawable/button"
        android:text="@string/parking_finish"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:background="@drawable/button"
        android:text="@string/parking_start"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="161dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.456" />

    <EditText
        android:id="@+id/domainText"
        android:layout_width="172dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/domain"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        android:layout_marginStart="12dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="33dp"
        app:layout_constraintLeft_toLeftOf="@+id/startButton"
        android:layout_marginLeft="16dp" />

</android.support.constraint.ConstraintLayout>
